@@ -26,7 +26,7 @@ The reference documents are:
   sas2r16.pdf      www.t10.org   draft prior to SAS-2
   spl-r07.pdf      www.t10.org   draft prior to SPL ANSI INCITS 476-2011
   spl2r04c.pdf     www.t10.org   draft prior to SPL-2
-  spl3r02.pdf      www.t10.org   current draft
+  spl3r04.pdf      www.t10.org   current draft
   SFF_8485.PDF     www.sffcommittee.com   SGPIO revision 0.7
 
 In SAS-2.1 the physical layer was put into a document of that name
@@ -35,4 +35,4 @@ the SAS Protocol Layer (SPL).
 
 
 Doug Gilbert
-4th June 2013
+9th September 2013
