@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "June 2013" "smp_utils\-0.98" SMP_UTILS
+.TH SMP_UTILS "8" "September 2013" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -248,7 +248,7 @@ called the SAS Protocol Layer (SPL ANSI INCITS 476\-2011). The draft just
 prior to that standard is spl\-r07.pdf (see section 9.4.3 for SMP functions).
 Technical work on SAS\-2 is almost complete with the SMP functions defined
 in spl2r04c.pdf section 9.4.3. Work has commenced on SPL\-3 and the most
-recent draft is spl3r02.pdf. To avoid confusion, the multiple generations of
+recent draft is spl3r04.pdf. To avoid confusion, the multiple generations of
 SAS will be referred to in these man pages as SAS 1, 1.1, 2, 2.1 (SPL) and
 3 (SPL\-2 and SPL\-3). Roughly speaking SAS\-1 runs at 3 Gbps, SAS\-2 at 6
 Gbps and SAS\-3 at 12 Gbps. Drafts, including those just prior to
